--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "build": "gatsby build"
   },
   "dependencies": {
+    "@reach/dialog": "^0.10.0",
+    "@reach/tabs": "^0.10.0",
+    "@reach/visually-hidden": "^0.10.0",
     "gatsby": "^2.20.27",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-netlify-identity": "^0.2.5",
+    "react-netlify-identity-widget": "^0.2.7"
   }
 }
